--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-horizontal-scrolling-menu": "^0.7.10",
+    "react-hot-toast": "^1.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-with-firebase-auth": "^1.3.2",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.20.0",
     "eslint-plugin-react": "^7.22.0",
     "prettier": "2.2.1"
