--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.20.0",
     "eslint-plugin-react": "^7.22.0",
+    "husky": "^5.1.3",
     "prettier": "2.2.1"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npm run lint && npm test",
+      "pre-push": "npm run lint && npm test"
     }
   },
   "lint-staged": {
