--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "npm run build&&gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -55,7 +55,9 @@
     "eslint": "^7.20.0",
     "eslint-plugin-react": "^7.22.0",
     "husky": "^5.1.3",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "react-app-rewire-alias": "^1.0.1",
+    "react-app-rewired": "^2.1.8"
   },
   "husky": {
     "hooks": {
